# auteur

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
auteur/: __init__.py  cli.py  config.py  server.py
auteur/agents/: __init__.py  cinematographer.py  director.py
auteur/knowledge/: __init__.py  camera.py  color.py  composition.py  film_stock.py  lens.py  lighting.py  movement.py  ontology.py  project.py
auteur/knowledge/styles/: __init__.py  aesthetic.py  base.py  deakins.py  hoytema.py  lubezki.py  storaro.py
auteur/pipeline/: __init__.py  assets.py  sequence.py  shot.py
auteur/prompt/: __init__.py  composer.py  negative.py  optimizer.py  templates.py
auteur/providers/: __init__.py  base.py  fal.py  gemini.py  kie.py  registry.py
